--- a/Exercícios/Ex 022/fundo005.html
+++ b/Exercícios/Ex 022/fundo005.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="controle de ps1 png.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="fundo.css">
-    <title>Teste de imagem de fundo</title>
+    <title>Posicionamento</title>
 </head>
 <body>
     <style>
+        body{
+            background-image: url(imagens/pattern003.png);
+            height: 98vh;
+            background-position: right botton;
+        }
         a{
             color: black;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             
         }
     </style>
-    <div class="quadrado" id="q1"></div>
+    <a href="fundo006.html" rel="next" target="_self">Acessar fundo 006</a>
     <br>
-    <div class="quadrado" id="q2"></div>
-    <br>
-    <div class="quadrado" id="q3"></div>
-    <br>
-<a href="fundo002.html" rel="next" target="_self"> Acesssar fundo 002</a>
+    <a href="fundo004.html" rel="prev" target="_self">Volte ao fundo 004</a>
 </body>
 </html>
